#268 Merge sort with stream.